Add comments for dependency